@@ -68,7 +68,7 @@
        </size>
       </property>
       <property name="text">
-       <string>Inserisci username e password!</string>
+       <string/>
       </property>
      </widget>
     </item>
